# pyc-editor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: cfg_creation.rs  extended_args.rs  sir_creation.rs
examples/: insert.rs  modify.rs
src/: cfg.rs  error.rs  lib.rs  pyc_versions.rs  sir.rs  sir_passes.rs  traits.rs  utils.rs
src/snapshots/: pyc_editor__cfg__test__311_async_exception.snap  pyc_editor__cfg__test__311_async_exception.snap.new  pyc_editor__cfg__test__311_exception_handling_grouped.snap  pyc_editor__cfg__test__311_exception_handling_in_loop.snap  pyc_editor__cfg__test__async_func.snap  pyc_editor__cfg__test__exception_block_311.snap  pyc_editor__cfg__test__ext_trick.snap  pyc_editor__cfg__test__ext_trick.snap.new  pyc_editor__cfg__test__ext_trick_with_jump.snap  pyc_editor__cfg__test__index_map-2.snap  pyc_editor__cfg__test__index_map.snap  pyc_editor__cfg__test__simple_instructions.snap  pyc_editor__cfg__test__simple_program.snap  pyc_editor__cfg__test__simple_to_ext_instructions.snap  pyc_editor__cfg__test__simple_to_ext_instructions_ext_on_jump.snap  pyc_editor__sir__test__310_nested_try.snap  pyc_editor__sir__test__310_with_block.snap  pyc_editor__sir__test__complex_cfg_to_sir.snap  pyc_editor__sir__test__exception_block_310.snap  pyc_editor__sir__test__exception_block_311.snap  pyc_editor__sir__test__force_stack_depth.snap  pyc_editor__sir__test__lot_of_args_call.snap  pyc_editor__sir__test__simple_cfg_to_sir.snap
src/v310/: cfg.rs  code_objects.rs  editor.rs  ext_instructions.rs  instructions.rs  mod.rs  opcodes.rs  sir_passes.rs
src/v310/snapshots/: pyc_editor__v310__cfg__test__finalize_cfg.snap  pyc_editor__v310__cfg__test__finalize_cfg_with_pop_block_last.snap
src/v311/: cfg.rs  code_objects.rs  ext_instructions.rs  instructions.rs  mod.rs  opcodes.rs  sir_passes.rs
src/v312/: cache.rs  cfg.rs  code_objects.rs  ext_instructions.rs  instructions.rs  mod.rs  opcodes.rs  sir_passes.rs
src/v313/: cache.rs  cfg.rs  code_objects.rs  ext_instructions.rs  instructions.rs  mod.rs  opcodes.rs  sir_passes.rs
tests/: integration_test.rs
tests/common/: mod.rs
