[package]
name = "pyc_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.1"
hashable = "0.0.0"
indexmap = "2.10.0"
num-bigint = "0.4.6"
num-complex = "0.4.6"
ordered-float = "5.0.0"
python_marshal = "0.3.11"

[dev-dependencies]
cmd_lib = "1.9.6"
env_logger = "0.11.8"
num-traits = "0.2.19"
pretty_assertions = "1.4.1"
rayon = "1.10.0"
reqwest = { version = "0.12.20", features = ["blocking"] }
zip = "4.2.0"
