[package]
name = "pyc_editor"
license = "GPL-3.0-or-later"
description = "A Rust library for reading, modifying, and writing Python .pyc files."
repository = "https://github.com/Svenskithesource/pyc-editor"
readme = "README.md"
version = "0.2.7"
edition = "2021"

[dependencies]
bitflags = "2.9.1"
hashable = "0.0.0"
indexmap = "2.10.0"
num-bigint = "0.4.6"
num-complex = "0.4.6"
ordered-float = "5.0.0"
python_marshal = "0.4.2"
store-interval-tree = "0.4.0"

[dev-dependencies]
cmd_lib = "1.9.6"
env_logger = "0.11.8"
num-traits = "0.2.19"
pretty_assertions = "1.4.1"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
zip = "4.3.0"
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "extended_args"
harness = false