[package]
name = "pyc_editor"
license = "GPL-3.0-or-later"
description = "A Rust library for reading, modifying, and writing Python .pyc files."
repository = "https://github.com/Svenskithesource/pyc-editor"
readme = "README.md"
version = "0.4.2"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
displaydoc = "0.2.5"
hashable = "0.0.0"
indexmap = "2.10.0"
num-bigint = "0.4.6"
num-complex = "0.4.6"
ordered-float = "5.0.0"
paste = "1.0.15"
python-instruction-dsl-proc = "0.1.7"
python_marshal = "0.4.6"
store-interval-tree = "0.4.0"

[patch.crates-io]
python-instruction-dsl-proc = { git = "https://github.com/Svenskithesource/python-instruction-dsl-proc", branch = "sir-models"}

[dev-dependencies]
# Enable all features for testing purposes
pyc_editor = { path = ".", features = ["v310", "v311", "v312", "v313"] }
cmd_lib = "1.9.6"
env_logger = "0.11.8"
num-traits = "0.2.19"
pretty_assertions = "1.4.1"
rayon = "1.11.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
zip = "4.3.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
petgraph = "0.8.3"

[[bench]]
name = "extended_args"
harness = false

[features]
v310 = []
v311 = []
v312 = []
v313 = []
